Aggiunta del campo di input per impostare il limite di elementi massimi

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body onLoad="init()">
 	<center>
 	<h2><b>Progetto 1</b></h2>
+    </center>
+    
+    <label for="iMaxElem"> Numero di elemti massimi: </label>
+    <input type="text" id="iMaxElem" value="30">
+    <button onclick="impostaMaxElem(iMaxElem)" >Imposta Limite </button>
 	
 </body>
 
