Aggiunta tabella con relativa intestazione

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
     <input type="text" id="iMaxElem" value="30">
     <button onclick="impostaMaxElem(iMaxElem)" >Imposta Limite </button>
 	
+    <center>
+        <div class="divTabella">
+            <label id="scrittaMaxElem"> Limite elementi massimi: 30 </label>
+            <table id="tabella" border="1" class="tabella">
+                <thead>
+                    <tr>
+                        <th>NOME</th>
+                        <th>QUANTIT&Aacute;</th>
+                    </tr>
+                </thead>   
+            </table>
+        <div>
+    </center>
+    
+    
 </body>
 
 </html>
